[gd_scene load_steps=13 format=3 uid="uid://cn1p0g0dm5m8c"]

[ext_resource type="Texture2D" uid="uid://cnvoemujm7suf" path="res://example_1_dude/Old hero.png" id="1_wjkx2"]
[ext_resource type="Script" path="res://example_1_dude/AnimatedDude.gd" id="2_bqdfu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_okrpk"]
atlas = ExtResource("1_wjkx2")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsgu1"]
atlas = ExtResource("1_wjkx2")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u7eb"]
atlas = ExtResource("1_wjkx2")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7uyu"]
atlas = ExtResource("1_wjkx2")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7nq1"]
atlas = ExtResource("1_wjkx2")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jruvf"]
atlas = ExtResource("1_wjkx2")
region = Rect2(32, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bmkmj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okrpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsgu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u7eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7uyu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7nq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jruvf")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_b4ym4"]
_data = [Vector2(0, 1), 0.0, -0.0786887, 0, 0, Vector2(0.111842, 0), -0.399999, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_87we2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.230263, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="LabelSettings" id="LabelSettings_vnk2m"]
font_size = 8

[node name="Example_1_Dude" type="Node2D"]

[node name="AnimatedDude" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(343, 362)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_bmkmj")
autoplay = "default"
frame_progress = 0.991267
script = ExtResource("2_bqdfu")

[node name="UtilityAIAgent" type="UtilityAIAgent" parent="AnimatedDude"]
thinking_delay_in_seconds = 0.1

[node name="CursorChasingSensors" type="UtilityAISensorGroup" parent="AnimatedDude/UtilityAIAgent"]

[node name="DistanceToCursor" type="UtilityAISensor" parent="AnimatedDude/UtilityAIAgent/CursorChasingSensors"]

[node name="Wait Behaviour" type="UtilityAIBehaviour" parent="AnimatedDude/UtilityAIAgent"]

[node name="AmIAtTheCursorLocation" type="UtilityAIConsideration" parent="AnimatedDude/UtilityAIAgent/Wait Behaviour"]
input_sensor_node_path = NodePath("../../CursorChasingSensors/DistanceToCursor")
activation_curve = SubResource("Curve_b4ym4")

[node name="Wait" type="UtilityAIAction" parent="AnimatedDude/UtilityAIAgent/Wait Behaviour"]

[node name="ChaseTheCursor Behaviour" type="UtilityAIBehaviour" parent="AnimatedDude/UtilityAIAgent"]
can_be_interrupted = true

[node name="AmINotAtTheCursorLocation" type="UtilityAIConsideration" parent="AnimatedDude/UtilityAIAgent/ChaseTheCursor Behaviour"]
input_sensor_node_path = NodePath("../../CursorChasingSensors/DistanceToCursor")
activation_curve = SubResource("Curve_87we2")

[node name="GoToCursorLocation" type="UtilityAIAction" parent="AnimatedDude/UtilityAIAgent/ChaseTheCursor Behaviour"]
action_id = 1

[node name="CurrentBehaviourLabel" type="Label" parent="AnimatedDude"]
offset_left = -34.0
offset_top = 9.0
offset_right = 35.0
offset_bottom = 32.0
label_settings = SubResource("LabelSettings_vnk2m")
horizontal_alignment = 1
autowrap_mode = 1

[connection signal="behaviour_changed" from="AnimatedDude/UtilityAIAgent" to="AnimatedDude" method="_on_utility_ai_agent_behaviour_changed"]
